# rag-build-project

./: .gitignore  README.md  app.py  check_setup.py  main.py  pyproject.toml
notebooks/: 01-chunking-scratch-pad.ipynb  02-loading-and-chunking.ipynb  03-embedding-chunks.ipynb  04-searching-test.ipynb  05-querying-and-ranking.ipynb  06-evaluation-testing.ipynb  bug-aliasing-example.md  bug-stale-heading-example.md  example.md
src/: chunking.py  config.py  embedding.py  loading.py  querying.py  vector_store.py
src/rag_build/: chunking.py  config.py  embedding.py  evaluate.py  loading.py  querying.py  response.py  utils.py  vector_store.py
