[project]
name = "rag-build"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "claude>=0.4.11",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_build"]
